--- a/src/components/Customer.css
+++ b/src/components/Customer.css
@@ -1,4 +1,4 @@
-.customer-container {
+/* .customer-container {
   display: grid;
-  grid-template-columns: 1fr 1fr 5fr 5fr;
-}
+  grid-template-columns: 1fr 1fr 3fr 1fr 1fr;
+} */
