Attempt to style selected movie and customer display

--- a/src/App.css
+++ b/src/App.css
@@ -34,16 +34,13 @@
 
 .rental-select-container {
   display: grid;
-  grid-template-rows: 1fr 1fr;
   grid-template-columns: 2fr 1fr 1fr;
-  align-content: center;
+  grid-template-rows: 1fr 1fr
 }
 
 .select-movie {
   grid-row: 1;
   grid-column: 1/span 2;
-  display: flex;
-  justify-content: center;
 }
 
 .select-customer {
@@ -53,6 +50,7 @@
 
 .select-customer-text, .select-movie-text {
   font-weight: bolder;
+
 }
 
 .home-img {
