--- a/src/App.css
+++ b/src/App.css
@@ -20,7 +20,8 @@
 
 .App-header > h1 {
   margin: 25px;
-  font-family: 'Rajdhani', sans-serif;
+  /* font-family: 'Rajdhani', sans-serif; */
+  font-family: 'Saira', sans-serif;
   font-size: 3rem;
 }
 
@@ -88,4 +89,12 @@ nav > a {
 
 nav > a:hover {
   color: #FFCC00;
+}
+
+ul {
+  list-style: none;
+}
+
+strong {
+  color: #1030AD;
 }
