--- a/src/components/Customers.css
+++ b/src/components/Customers.css
@@ -1,6 +1,6 @@
 .table-header-row {
-  background-color: black;
-  color: white;
+  background-color: #1030AD;
+  color: #FFCC00;
 }
 
 .customer-name {
